added create entry

--- a/app/templates/green_areas/index.html
+++ b/app/templates/green_areas/index.html
@@ -10,7 +10,7 @@
     </div>
     <div class="col text-end">
         <!-- <a class="btn btn-light p-1 px-3 me-2" href="#">Volver</a> -->
-        <a class="btn btn-dark p-1 px-3 me-2" href="#">Nuevo</a>
+        <a class="btn btn-dark p-1 px-3 me-2" href="{{ url_for("green_area_bp.new_green_zones") }}">Nuevo</a>
     </div>
 </div>
 
