--- a/app/templates/green_areas/index.html
+++ b/app/templates/green_areas/index.html
@@ -26,6 +26,7 @@
                 <th scope="col">Juegos</th>
                 <th scope="col">Bancos</th>
                 <th scope="col">Editar</th>
+                <!-- <th scope="col">Borrar</th> -->
             </tr>
         </thead>
         <tbody class="table-group-divider">
@@ -62,6 +63,13 @@
                             class="bi bi-pencil-square link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover ms-2"></i>
                     </a>
                 </td>
+
+                <!-- <td>
+                    <a href="{{ url_for("green_area_bp.delete_green_zones", id=item.id) }}">
+                        <i
+                            class="bi bi-trash3 link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover ms-2"></i>
+                    </a>
+                </td> -->
             </tr>
             {% endfor %}
         </tbody>
